established mongoose connection to the database

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/marinadelkovamoro/news_scraper#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "handlebars": "^4.1.2",
+    "express-handlebars": "^3.1.0",
     "mongoose": "^5.6.5"
   }
 }
